// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpressSummary correctly with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totaling 
    $1,141.95
  </p>
</div>
`;

exports[`should render ExpressSummary correctly with no expenses 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totaling 
    $0.00
  </p>
</div>
`;
